feat(docs): update docs
